log
Thu 09 May 2024 04:34:34 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:16: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   62 |     TreeNode * nuevo = createTreeNode(key, value);
      |                ^~~~~
treemap.c:49:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   49 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4b1bfc3
